socials color change

--- a/css/assets.css
+++ b/css/assets.css
@@ -2,7 +2,7 @@
 /*--------------------------------------------------
 	Ajax Page Transition
 ---------------------------------------------------*/
-	
+
 	main{
 		overflow:hidden
 	}
@@ -72,11 +72,11 @@
 		-moz-transition:opacity .3s 0s,visibility 0s 0s;
 		transition:opacity .3s .3s,visibility 0s 0s
 	}
- 
+
 
 /*--------------------------------------------------
 	Flex Nav
----------------------------------------------------*/	
+---------------------------------------------------*/
 
 	.flexnav,.flexnav li ul{
 		width:100%;
@@ -323,7 +323,7 @@
 
 /*--------------------------------------------------
 	Swiper Slider
----------------------------------------------------*/	
+---------------------------------------------------*/
 
 	.swiper-container {
   margin: 0 auto;
@@ -936,7 +936,7 @@ button.swiper-pagination-bullet {
 
 /*--------------------------------------------------
 	Owl Carousel
----------------------------------------------------*/	
+---------------------------------------------------*/
 
 	.owl-carousel,.owl-carousel .owl-item{
 		-webkit-tap-highlight-color:transparent;
@@ -1099,7 +1099,7 @@ button.swiper-pagination-bullet {
 
 /*--------------------------------------------------
 	Magnific Popup
----------------------------------------------------*/	
+---------------------------------------------------*/
 
 	.mfp-bg,.mfp-wrap{
 		position:fixed;
@@ -1465,10 +1465,9 @@ button.swiper-pagination-bullet {
 		}
 	}
 
-	
 /*--------------------------------------------------
 	Tool Tips
----------------------------------------------------*/	
+---------------------------------------------------*/
 
 	[data-tooltip]{
 		position:relative
@@ -1548,7 +1547,7 @@ button.swiper-pagination-bullet {
 
 /*--------------------------------------------------
 	Social Share
----------------------------------------------------*/	
+---------------------------------------------------*/
 
 	.jssocials-shares{
 		margin:.2em 0
@@ -1613,10 +1612,26 @@ button.swiper-pagination-bullet {
 		vertical-align:middle
 	}
 
+	.socials-text{
+		color: #FFF
+	}
+
+	.socials-icon{
+		color: #FFF
+	}
+
+	.socials{
+		color: #FFF
+	}
+
+	.parallax-wrap{
+		color: #FFF
+	}
+
 
 /*--------------------------------------------------
 	Justified Galler
----------------------------------------------------*/	
+---------------------------------------------------*/
 
 	.justified-gallery{
 		width:100%;
