--- a/css/assets.css
+++ b/css/assets.css
@@ -1616,9 +1616,9 @@ button.swiper-pagination-bullet {
 	Slide Count
 ---------------------------------------------------*/
 
-	.slide-count{
+	/* .slide-count{
 		color: #FFF;
-	}
+	} */
 
 /*--------------------------------------------------
 	Justified Galler
