--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ Primary use:	Showcase Portfolio
 		height:100%;
 		width:100%;
 		color:#999;
-		background-color:#0f1010;
+		background-color:#FFF;
 	}
 
 	html {
@@ -1873,7 +1873,7 @@ Primary use:	Showcase Portfolio
 		position:relative;
 		opacity:0;
 		height: 100%;
-    min-height: 100vh; 
+    min-height: 100vh;
 	}
 
 	.load-project-page #main, .load-next-project #main {
