--- a/style.css
+++ b/style.css
@@ -479,7 +479,7 @@ Primary use:	Showcase Portfolio
     font-stretch: normal;
     font-size: 11px;
     line-height: 0;
-    font-family: Montserrat;
+    font-family: Montserrat; Sans Serif;
 		margin-bottom: 8px;
 
 	}
